public abstract class Factory {
    public abstract Connection3_3 createConnetion();
    public abstract Statement createStatement();
}
