public class mysqlStatement extends Statement{
    @Override
    public void execute() {
        System.out.println("Using MySql Statamemnts");
    }
}
