public class oracleConnection extends Connection3_3{
    @Override
    public void execute() {
        System.out.println("Using Oracle Connection");
    }
}
