public class oracleStatement extends Statement {
    @Override
    public void execute() {
        System.out.println("Using Oracle Statamemnts");
    }
}
